<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>com.evolvedbinary.maven.jvnet</groupId>
		<artifactId>jaxb-maven-plugin-project</artifactId>
		<version>0.17.0-SNAPSHOT</version>
	</parent>

	<artifactId>jaxb40-maven-plugin</artifactId>
	<packaging>maven-plugin</packaging>
	<name>Maven JAXB 4.0.x Plugin</name>

	<prerequisites>
		<maven>${maven.version}</maven>
	</prerequisites>

	<scm>
		<connection>scm:git:https://github.com/evolvedbinary/jvnet-jaxb-maven-plugin.git</connection>
		<developerConnection>scm:git:https://github.com/evolvedbinary/jvnet-jaxb-maven-plugin.git</developerConnection>
		<url>https://github.com/evolvedbinary/jvnet-jaxb-maven-plugin</url>
		<tag>HEAD</tag>
	</scm>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>jaxb-maven-plugin-core</artifactId>
			<version>${project.version}</version>
			<exclusions>
				<exclusion>
					<groupId>javax.xml.bind</groupId>
					<artifactId>jaxb-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-xjc</artifactId>
			<version>${jaxb40.version}</version>
		</dependency>

		<dependency>
			<groupId>com.sun.xml.bind</groupId>
			<artifactId>jaxb-impl</artifactId>
			<version>${jaxb40.version}</version>
			<scope>runtime</scope>
		</dependency>

		<!-- Maven plugin and api classes -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<scope>provided</scope>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<configuration>
					<rules>
						<requireJavaVersion>
							<version>${maven.compiler.target}</version>
						</requireJavaVersion>
					</rules>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>analyze</id>
						<goals>
							<goal>analyze-only</goal>
						</goals>
						<configuration>
							<ignoredUnusedDeclaredDependencies>
								<ignoredUnusedDeclaredDependency>org.apache.maven:maven-core:jar:${maven.version}</ignoredUnusedDeclaredDependency>
								<ignoredUnusedDeclaredDependency>com.sun.xml.bind:jaxb-impl:jar:${jaxb40.version}</ignoredUnusedDeclaredDependency>
							</ignoredUnusedDeclaredDependencies>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-plugin-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifestEntries>
							<Add-Opens>java.base/java.lang</Add-Opens>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>
